Improved parsing options